--- a/overview.html
+++ b/overview.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Union 众创模式</title>
+	<title>Overview</title>
 </head>
 <body>
-    <img src="union.png" srcset="union.svg" alt="Union" />
+<img src="LowRiskStartup.png" srcset="LowRiskStartup.svg" alt="Overview"/>
 </body>
 </html>
