--- a/character.html
+++ b/character.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>创始人性格</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Founder Characters 创始人性格</title>
 </head>
 <body>
 <svg version="1.2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="1431" height="2261" viewBox="0 0 1431 2261">
