--- a/exogroup.html
+++ b/exogroup.html
@@ -5,6 +5,6 @@
 	<title>ExO Group</title>
 </head>
 <body>
-<img src="exogroup.jpeg" alt="ExOGroup"/>
+<img src="exogroup.jpeg" alt="ExOGroup" style="display: block;margin-left: auto;margin-right: auto;"/>
 </body>
 </html>
