update li format

--- a/jim.html
+++ b/jim.html
@@ -12,11 +12,10 @@
   gtag('config', 'UA-82831809-2');
 </script>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Jim Kwik | socialreadingclub</title>
 <meta property="og:title" content="Jim Kwik" />
 <meta property="og:locale" content="en_US" />
@@ -33,58 +32,18 @@
 
       <h3 id="jims-number-13102999362">Jim’s number: <a href="tel: +13102999362">+13102999362</a></h3>
 
-<h2 id="10-x-tips">10 x tips</h2>
+<h2 id="10-x-tips">10 tips</h2>
 <ul>
-  <li>
-    <ol>
-      <li>Memory is train and untrained memory. Not good or bad…1/3 of your brain is determined by biology, so 2/3 is in your control. Good brain diet. Neuro-nutrition is different for your body. Go to a dr. And get a gut analysis. Avocado, broccoli, eggs, blueberries, green leaf vegetables, turmeric + black pepper, wild caught salmon</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Reduce the can’t in the brain. Killing automated thoughts.</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Exercise (good flow, oxygen). For every hour, take a break and move around for 5m. Walking meetings. Podcast while moving has better retentions</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Brain nutrients - vitamin b, e, omega 3</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Positive peer group/social connections</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Clean, organized environment (for clarity of thought). Marie Kondo your mind.</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Sleep (where you clean out plaque, it’s where you dream which is very important). Low temperature, darkness, no caffeine after 2. It’s the quality of sleep - deep sleep &amp; rem</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Brain protection - wear a helmet</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>New Learnings - the ways to have neuro-plasticisty, brain grows with novelty &amp; nutrition. Like the nuns who are lifelong learners.</li>
-    </ol>
-  </li>
-  <li>
-    <ol>
-      <li>Stress management. Chronic stress shrinks your brain. It has an algorithm, so it’ll start to program your brain.</li>
-    </ol>
-  </li>
+  <li>Memory is train and untrained memory. Not good or bad…1/3 of your brain is determined by biology, so 2/3 is in your control. Good brain diet. Neuro-nutrition is different for your body. Go to a dr. And get a gut analysis. Avocado, broccoli, eggs, blueberries, green leaf vegetables, turmeric + black pepper, wild caught salmon</li>
+  <li>Reduce the can’t in the brain. Killing automated thoughts.</li>
+  <li>Exercise (good flow, oxygen). For every hour, take a break and move around for 5m. Walking meetings. Podcast while moving has better retentions</li>
+  <li>Brain nutrients - vitamin b, e, omega 3</li>
+  <li>Positive peer group/social connections</li>
+  <li>Clean, organized environment (for clarity of thought). Marie Kondo your mind.</li>
+  <li>Sleep (where you clean out plaque, it’s where you dream which is very important). Low temperature, darkness, no caffeine after 2. It’s the quality of sleep - deep sleep &amp; rem</li>
+  <li>Brain protection - wear a helmet</li>
+  <li>New Learnings - the ways to have neuro-plasticisty, brain grows with novelty &amp; nutrition. Like the nuns who are lifelong learners.</li>
+  <li>Stress management. Chronic stress shrinks your brain. It has an algorithm, so it’ll start to program your brain.</li>
 </ul>
 
 <p>MOM = <code class="language-plaintext highlighter-rouge">motivation observation and methods</code>
