--- a/jim.html
+++ b/jim.html
@@ -46,8 +46,8 @@
   <li>Stress management. Chronic stress shrinks your brain. It has an algorithm, so it’ll start to program your brain.</li>
 </ul>
 
-<p>MOM = <code class="language-plaintext highlighter-rouge">motivation observation and methods</code>
-P<em>E</em>S3 = <code class="language-plaintext highlighter-rouge">purpose, energy, small simple step</code></p>
+<p>MOM = <code class="language-plaintext highlighter-rouge">motivation observation and methods</code></p>
+<p>P<em>E</em>S3 = <code class="language-plaintext highlighter-rouge">purpose, energy, small simple step</code></p>
 
 <p><a href="https://www.limitlessbook.com">book website</a></p>
 
