--- a/jim.html
+++ b/jim.html
@@ -2,6 +2,26 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '154103586026015',
+      xfbml      : true,
+      version    : 'v6.0'
+    });
+  
+    FB.AppEvents.logPageView();
+  
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82831809-2"></script>
 <script>
