add baidu analytics

--- a/jim.html
+++ b/jim.html
@@ -31,6 +31,16 @@
 
   gtag('config', 'UA-82831809-2');
 </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?0772295ec9b8608ee8266f2a41205997";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
